--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
