--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
