--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "clsx": "^2.1.1",
+    "cookies-next": "^4.1.1",
     "next": "14.2.3",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
-    "sonner": "^1.4.41"
+    "react-simple-keyboard": "^3.7.121",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
